# DualSenseY-v2-battery-led-fix

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DSX.py  README.md  appid.reg
AudioPassthrough/: AudioPassthrough.sln
AudioPassthrough/AudioPassthrough/: AudioPassthrough.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
AudioPassthrough/AudioPassthrough/Properties/: Resources.Designer.cs
BTControl/: BTControl.sln
BTControl/BTControl/: BTControl.csproj  Program.cs
ViGEmClient/: CMakeLists.txt  LICENSE  README.md  ViGEmClient.sln  ViGEmClient.sln.DotSettings  appveyor.yml
ViGEmClient/cmake/: ViGEmClient.pc.in  ViGEmClientConfig.cmake.in
ViGEmClient/include/ViGEm/: Common.h
ViGEmClient/src/: Internal.h  README.md  UniUtil.h  ViGEmClient.cpp  ViGEmClient.rc  ViGEmClient.vcxproj  ViGEmClient.vcxproj.filters  resource.h
app/: CMakeLists.txt  Config.cpp  Config.h  ControllerEmulation.cpp  ControllerEmulation.h  DualSense.cpp  DualSense.h  IMMNotificationClient.h  MyUtils.cpp  MyUtils.h  Settings.cpp  Settings.h  Stopwatch.hpp  Strings.cpp  Strings.h  UDP.cpp  UDP.h  Utils.h  cycle.cpp  cycle.hpp  icon.xcf  imgui.ini  main.cpp  miniaudio.h
hidhide_service_request/: hidhide_service_request.sln
hidhide_service_request/hidhide_service_request/: Program.cs  app.manifest  hidhide_service_request.csproj
hidhide_service_request/hidhide_service_request/Properties/PublishProfiles/: FolderProfile.pubxml
src/render/: render.cpp
